Bug 430943 - KComboBox's KLineEdit drawn with no border at all when KComboBox::setEditable(true) is called on already visible widget
Summary: KComboBox's KLineEdit drawn with no border at all when KComboBox::setEditable...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.20.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-12-29 14:48 UTC by phd
Modified: 2021-02-26 14:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.2
Sentry Crash Report:


Attachments
KFileWidget-X0.png (8.19 KB, image/png)
2020-12-29 14:48 UTC, phd
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phd 2020-12-29 14:48:10 UTC
Created attachment 134380 [details]
KFileWidget-X0.png

After this change 2f351fe1 [1] KComboBox's KLineEdit is drawn with no border at
all (see picture) when KComboBox::setEditable(true) is called on already visible
KComboBox widget.

To reproduce you can apply this simple commit to pdabrowski/kio@50d749cb [2] to
KIO and run KWrite (or anything), click Open to show KFileWidget, and then press
Alt+AnyKey shortcut to make 'Type filter' KComboBox widget editable.
With 2f351fe1 [1] reverted the above works fine.

All other styles ("Oxygen", "Fusion", "MS Windows 9x") work fine.

Original bug report: https://invent.kde.org/plasma/breeze/-/issues/2

[1] https://invent.kde.org/plasma/breeze/-/commit/2f351fe101d6a706b618b4f9518581006f50b242
[2] https://invent.kde.org/pdabrowski/kio/commit/50d749cb8621c0707fba9a07f4c2e5e77d07f329
Comment 1 Nate Graham 2020-12-30 15:36:09 UTC
Confirmed.
Comment 2 Janet Blackquill 2020-12-31 19:40:53 UTC
Investigating.
Comment 3 Janet Blackquill 2020-12-31 22:33:50 UTC
See https://invent.kde.org/frameworks/kcompletion/-/merge_requests/9.
Comment 4 Nate Graham 2021-02-26 14:55:14 UTC
Git commit f9758726eeff08212778ea04c1fc284989ef2e82 by Nate Graham, on behalf of Jan Blackquill.
Committed on 26/02/2021 at 14:43.
Pushed by ngraham into branch 'master'.

Revert "[kstyle]: Add double-ringed focus for text fields"

This reverts commit 2f351fe101d6a706b618b4f9518581006f50b242.

We hve not yet figured out how to apply this style consistently
and were unable to implement it for controls other than text fields
in Plasma 5.21, so it is better to remove it for now than to have an
inconsistent UI. We will re-evaluate this for Plasma 5.22.
Related: bug 430944, bug 433421
FIXED-IN: 5.21.2

M  +1    -15   kstyle/breezehelper.cpp
M  +1    -9    kstyle/breezehelper.h
M  +2    -7    kstyle/breezemetrics.h
M  +6    -43   kstyle/breezestyle.cpp
M  +0    -1    kstyle/breezestyle.h

https://invent.kde.org/plasma/breeze/commit/f9758726eeff08212778ea04c1fc284989ef2e82
Comment 5 Nate Graham 2021-02-26 14:55:42 UTC
Git commit bf7c35808a3a29aff9359b44ab54d48426f95d25 by Nate Graham, on behalf of Jan Blackquill.
Committed on 26/02/2021 at 14:55.
Pushed by ngraham into branch 'Plasma/5.21'.

Revert "[kstyle]: Add double-ringed focus for text fields"

This reverts commit 2f351fe101d6a706b618b4f9518581006f50b242.

We hve not yet figured out how to apply this style consistently
and were unable to implement it for controls other than text fields
in Plasma 5.21, so it is better to remove it for now than to have an
inconsistent UI. We will re-evaluate this for Plasma 5.22.
Related: bug 430944, bug 433421
FIXED-IN: 5.21.2


(cherry picked from commit f9758726eeff08212778ea04c1fc284989ef2e82)

M  +1    -15   kstyle/breezehelper.cpp
M  +1    -9    kstyle/breezehelper.h
M  +2    -7    kstyle/breezemetrics.h
M  +6    -43   kstyle/breezestyle.cpp
M  +0    -1    kstyle/breezestyle.h

https://invent.kde.org/plasma/breeze/commit/bf7c35808a3a29aff9359b44ab54d48426f95d25