KComboBox: Properly resize when switching between editable and uneditable

BUG: 430943